# procfs-sensor

./: Dockerfile-cpython  README.md  contributing.md  main.py  setup.cfg  setup.py
.github/workflows/: release.yml
config_files_examples/: config_sensor.json
procfs_sensor/: __main__.py
