[metadata]
name = procfs-sensor
version = attr: procfs_sensor.__version__
description = Procfs-Sensor is a formula for a self-adaptive software-defined power meter based on the PowerAPI framework.
long_description = file: README.md, LICENSE
keywords = energy, powerapi, performance counters, sensor
author = Lauric Desauw
license = MIT
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU Affero General Public License v3

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find_packages()
test_suite = tests
setup_requires =
    pytest-runner >=3.9.2
tests_require =
    pytest >=3.9.2
    pytest-asyncio >=0.14.0
    pytest-timeout >=1.4.2
